--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,6 @@
 <section class="bio">
   <p>
-    Alex Taylor is a designer, front-end developer, and occasional trainer. He enjoys helping to make things and people better than they were.
+    Alex Taylor is a designer who makes things better than they were.
   </p>
   <p>
     He lives in Providence, Rhode Island with his wife and two boys.
